src/test/ui/const-generics/int-as-ref-const-param.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/int-as-ref-const-param.rs:4:12
   |
LL | #![feature(const_generics, const_compare_raw_pointers)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0308]: mismatched types
  --> $DIR/int-as-ref-const-param.rs:23:25
   |
LL |     let _: Const<{A}> = Const::<{B}>;
   |                         ^^^^^^^^^^^^ expected `$PREFIX0000000a : &()`, found `$PREFIX0000000b : &()`
   |
   = note: expected type `Const<$PREFIX0000000a : &()>`
              found type `Const<$PREFIX0000000b : &()>`

error[E0308]: mismatched types
  --> $DIR/int-as-ref-const-param.rs:24:25
   |
LL |     let _: Const<{A}> = Const::<{&()}>;
   |                         ^^^^^^^^^^^^^^ expected `$PREFIX0000000a : &()`, found `{pointer} : &()`
   |
   = note: expected type `Const<$PREFIX0000000a : &()>`
              found type `Const<{pointer} : &()>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
